--- a/portfolio.html
+++ b/portfolio.html
@@ -7,10 +7,11 @@
     <title>Amy McLaughlin's Portfolio</title>
 </head>
 <body>
-        <header><h1>Amy McLaughlin</h1>
-            <div>About</div>
-            <div>Portfolio</div>
-            <div>Contact</div>
-        </header>
+      <div id="navbar">
+          <ul>
+              <li><link rel="stylesheet" href="/index.html/"></li>
+              <li></li>
+          </ul>
+      </div>  
 </body>
 </html>
