--- a/contact.html
+++ b/contact.html
@@ -4,24 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Amy McLaughlin's Contact Page</title>
 </head>
 <body>
-        <header><h1>Amy McLaughlin</h1>
-            <div>About</div>
-            <div>Portfolio</div>
-            <div>Contact</div>
-        </header>  
+         <!--HEADER-->
+         <h1>Amy McLaughlin's Portfolio</h1>
+         <!--NAVBAR-->
+<div class="navbar">
+ <div id="Contact"><p>Contact</p></div>
+ <div id="Portfolio"><p>Portfolio</p></div>
+ <div id="About"><p>About</p></div>
+</div>
+ 
 
+    <div id="wrap"></div>
         <h2>Contact</h2>
+        <hr>
 
         <h3>Name</h3>
-        <div>input block</div>
+        <div id=input></div>
 
         <h3>Email</h3>
-        <div>input block</div>
+        <div id=input2></div>
 
         <h3>Message</h3>
-        <div>input block</div>
+        <div id=input3></div>
+        <br>
+        <br>
+
+        <button type="button" >Submit</button>
+
+     <div id="contactme"></div>
+     <!--Here I would code links to my social media, if I had social media to link to :-)--> 
+
+     <footer><p>Copyright 2018 Amy McLaughlin</p></footer>
+     
 </body>
 </html>
